# apprun-example

./: Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
deploy/: myapp.jsonnet
tf/: .gitignore  .terraform.lock.hcl  apprun_application.tf  container_registry.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
