[package]
name = "myapprun"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = [
    "tokio",
    "http1",
    "json",
] }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
tokio = { version = "1.43.0", default-features = false, features = [
    "macros",
    "rt",
] }

[[bin]]
name = "webapp"
path = "src/bin/main.rs"
